added detailed error info to helpers and particularly readHeader

--- a/bids_settings.json
+++ b/bids_settings.json
@@ -98,7 +98,7 @@
         "offset_dates": false,
         "gzip_edf": false
     },
-    "lastInputDirectory": "D:/tempAnonTest/test_inp",
-    "lastOutputDirectory": "C:/temp_out",
+    "lastInputDirectory": "C:/_Code_SortQueue/ss",
+    "lastOutputDirectory": "C:/_Code_SortQueue/tmp_[0]",
     "lastConvertTypeDirectory": "/media/veracrypt6/projects/ieeg_stimulation/retro/in/sub-R064/Mills~ Linda_b8cd71c8-a3aa-49b4-a69e-7a9496f54ade_2017-11-07_0001_0001.edf"
 }
