--- a/bids_settings.json
+++ b/bids_settings.json
@@ -98,7 +98,7 @@
         "offset_dates": false,
         "gzip_edf": false
     },
-    "lastInputDirectory": "C:/_Code_SortQueue/ss",
-    "lastOutputDirectory": "C:/_Code_SortQueue/tmp_[0]",
+    "lastInputDirectory": "E:/Step_B_EDF_phis/sub-167/sub-167",
+    "lastOutputDirectory": "X:/ieeg_dataset_d/sub-167/tmp",
     "lastConvertTypeDirectory": "/media/veracrypt6/projects/ieeg_stimulation/retro/in/sub-R064/Mills~ Linda_b8cd71c8-a3aa-49b4-a69e-7a9496f54ade_2017-11-07_0001_0001.edf"
 }
